@@ -1,6 +1,7 @@
 2020-07-15:
   - Bugfix: Make 'update' work with missing 'dispersion=' argument.
   - Bugfix: Make 'vcov' work for objects without 'phi' component.
+  - Add 'vcov' method for 'mmclogit' objects.
 
 2020-06-27:
   - Documented 'simulate()' methods.
